# driver-app

./: .gitignore  CLAUDE.md  README.md
apps/driver-mobile/: app.json  package-lock.json  package.json  tamagui.config.ts
apps/driver-mobile/app/: _layout.tsx  camera.tsx  login.tsx  scanner.tsx  settings.tsx
apps/driver-mobile/app/(tabs)/: _layout.tsx
apps/driver-mobile/src/api/: auth.ts  cash.ts  client.ts  jobs.ts  partial.ts  pod.ts  status.ts  sync.ts  uploads.ts
apps/driver-mobile/src/components/: ActionButton.tsx  Calendar.tsx  CashBadge.tsx  ErrorBoundary.tsx  JobCard.tsx  JobCardSkeleton.tsx  Logo.tsx  OfflineBanner.tsx  PhotoThumbnail.tsx  (+4 more)
docs/: driver-app-plan.md  odoo-integration.md
docs/superpowers/plans/: 2026-03-26-driver-api.md  2026-03-26-mobile-app.md  2026-04-11-app-improvements.md
docs/superpowers/specs/: 2026-03-26-api-contract-design.md  2026-03-26-mobile-app-design.md
planning/: next-steps.md
services/driver-api/: .env  .env.example  .gitignore  _mock_jobs.py  pyproject.toml
services/driver-api/app/: auth.py  config.py  database.py  errors.py  main.py  models.py  odoo_client.py  schemas.py  state_machine.py
services/driver-api/app/routers/: _mock.py  auth.py  cash.py  jobs.py  partial.py  pod.py  stats.py  status.py  sync.py  uploads.py
services/driver-api/scripts/: seed_drivers.py
services/driver-api/tests/: conftest.py  test_auth.py  test_cash.py  test_completion.py  test_e2e_odoo.py  test_jobs.py  test_odoo_integration.py  test_pod.py  test_state_machine.py  test_stats.py  test_status.py  test_sync.py  test_uploads.py
(+17 files in other folders)
