[project]
name = "driver-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
